# Proyecto01CPDScreensaver

./: .gitignore  CMakeLists.txt  Makefile  Makefile_Linux  Metricas.sh  README.md  Repositorio de GitHub.txt  gameofLife.h  gameofLifeParallel.h  mainParalelo.cpp  mainParalelo2.cpp  mainParalelo4.cpp  mainSecuencial.cpp  results.txt
